<resources>
    <string name="app_name">成长印记</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_base_recycler_view">BaseRecyclerViewActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_index">传递下标</string>
    <string name="tag_obj">传递对象</string>
    <string name="tag_ex">传递扩展信息</string>
    <string name="tip_exit">再次点击退出应用！</string>
    <string name="sdk_login_error">登录发生了错误</string>
    <string name="read_service"><![CDATA[<font color="#7f7f7d">已阅读并同意</font><font color="#0090e8">服务条款</font>]]></string>
    <string name="please_read_service">请阅读并同意服务条款</string>
    <string name="icon_expand">&#xe62d;</string>
    <string name="icon_empty">&#xe608;</string>
    <string name="icon_photo">&#xe606;</string>
    <string name="icon_setting">&#xe614;</string>
    <string name="icon_back">&#xe609;</string>
    <string name="icon_level_1">&#xe615;</string>
    <string name="icon_level_2">&#xe616;</string>
    <string name="icon_level_3">&#xe617;</string>
    <string name="icon_level_4">&#xe620;</string>
    <string name="icon_level_5">&#xe61f;</string>
    <string name="icon_level_6">&#xe61e;</string>
    <string name="icon_chat">&#xe60a;</string>
    <string name="icon_share">&#xe600;</string>
    <string name="icon_data">&#xe601;</string>
    <string name="icon_more">&#xe602;</string>
    <string name="icon_agreement">&#xe618;</string>
    <string name="icon_updata">&#xe62f;</string>
    <string name="icon_feedback">&#xe630;</string>
    <string name="icon_like">&#xe603;</string>
    <string name="icon_add">&#xe60b;</string>
    <string name="icon_check_in">&#xe605;</string>
    <string name="icon_letter">&#xe619;</string>
    <string name="icon_clean">&#xe622;</string>
    <string name="icon_comment">&#xe604;</string>
    <string name="icon_notification">&#xe61b;</string>
    <string name="icon_group_chat">&#xe60c;</string>
    <string name="icon_favor">&#xe61c;</string>
    <string name="icon_about">&#xe61d;</string>
    <string name="icon_delete">&#xe60d;</string>
    <string name="icon_speaker">&#xe60e;</string>
    <string name="icon_wechat_chat">&#xe60f;</string>
    <string name="icon_add_message">&#xe610;</string>
    <string name="icon_check">&#xe611;</string>
    <string name="icon_close">&#xe612;</string>
    <string name="icon_delete2">&#xe607;</string>
    <string name="icon_group">&#xe613;</string>
    <string name="icon_star">&#xe623;</string>
    <string name="icon_person">&#xe624;</string>
    <string name="icon_follow">&#xe625;</string>
    <string name="icon_following">&#xe626;</string>
    <string name="icon_wechat">&#xe62b;</string>
    <string name="icon_moment">&#xe62a;</string>
    <string name="icon_qq">&#xe627;</string>
    <string name="icon_q_zone">&#xe628;</string>
    <string name="icon_weibo">&#xe629;</string>
    <string name="mine">我的</string>
    <string name="share_url_invite">babyShare/invite.html?babyId=%1$d</string>
    <string name="share_url_time">babyShare/groupPicture.html?timeId=%1$d</string>
    <string name="share_url_milestone">babyShare/milestone.html?babyId=%1$d</string>
    <string name="share_url_generalmap">babyShare/generalMap.html?timeId=%1$d</string>
    <string name="share_url_diary">babyShare/diary.html?timeId=%1$d</string>
    <string name="share_url_video">babyShare/video.html?timeId=%1$d</string>
    <string name="share_url_circle_time_line">babyShare/groupPicture.html?timeId=%d&#038;type=2</string>
    <string name="picker_photo">选择图片</string>
    <string name="all_photo">全部图片</string>
    <string name="preview_selector_paths">预览(%1$d/%2$d)</string>
    <string name="photo_count">%1$d张</string>
    <string name="done">完成</string>
    <string name="done_selector_size">完成(%1$d/%2$d)</string>
    <string name="clear_photo">清理图片</string>
    <string name="check_update">检测到新版本</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_submit">确定</string>
    <string name="dialog_cancle">取消</string>
    <string name="publish">发布</string>
    <string name="edit_time">编辑时光</string>
    <string name="picker_video">选择视频</string>
    <string name="cloudAlbum">云相册</string>
    <string name="state_404">内容未找到，先去看看别的吧</string>
    <string name="state_btn_retry">重新加载</string>
    <string name="state_error_network">网络异常</string>
    <string name="state_error_no_connect">当前无网络连接，请重新连接</string>
    <string name="state_error_parse_error">数据解析异常</string>
    <string name="state_error_server_error">服务器有问题</string>
    <string name="state_error_timeout">网络连接超时或失败</string>
    <string name="action_edit">编辑</string>
    <string name="select_region">选择地区</string>
    <string name="reset_psw">重置密码</string>
    <string name="video_edit">裁剪视频</string>
    <string name="add_member">扫描上图二维码\n或输入邀请码即可加入您心仪的成长圈</string>
    <string name="price">价格:</string>
    <string name="price_promotion">活动价:</string>
    <string name="price_original">原价:</string>
    <string name="select_print_number">选择印刷数量</string>
    <string name="print_top_limit">(上限99本)</string>
    <string name="add_delivery_address">添加收货地址</string>
    <string name="please_add_delivery_address">请填写收货地址</string>
    <string name="modify_delivery_address">修改收货地址</string>
    <string name="receiver">收货人:</string>
    <string name="receiver_address">收货地址:</string>
    <string name="total_credit">%s积分</string>
    <string name="wexin_payoff">微信支付</string>
    <string name="e_payoff">翼支付</string>
    <string name="begin_payoff">支付中，请稍等&#8230;</string>
    <string name="zhifub">支付宝</string>
    <string name="order_amount">订单金额: ¥%.2f</string>
    <string name="order_amount_col">订单金额:</string>
    <string name="amount_col">总额:</string>
    <string name="order_no">订单编号:</string>
    <string name="order_num">订单号码:</string>
    <string name="apply_time">申请时间:</string>
    <string name="order_status">订单状态:</string>
    <string name="order_sumary">订单说明:</string>
    <string name="express_order_no">运单号码:</string>
    <string name="logistics_info">物流信息:</string>
    <string name="order_info">订单信息</string>
    <string name="order_go">去下单</string>
    <string name="print_unit_price">印刷单价:</string>
    <string name="print_number">印刷数量:</string>
    <string name="payoff_way">支付方式:</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancel">取消支付</string>
    <string name="please_select_payoff_way">请选择支付方式</string>
    <string name="select_payoff_way">选择支付方式</string>
    <string name="receiver_info">收货人信息</string>
    <string name="name">姓名:</string>
    <string name="address">地址:</string>
    <string name="hurry_up">催一催</string>
    <string name="order_detail">订单详情</string>
    <string name="order">订单</string>
    <string name="order_null">还没有订单哇？快去申请印刷吧</string>
    <string name="payoff_at_once">马上支付</string>
    <string name="show_order">确认收货</string>
    <string name="logistics_co">物流公司:</string>
    <string name="logistics_detail">物流详情</string>
    <string name="receiver_name">收货人姓名</string>
    <string name="address_detail">详细地址</string>
    <string name="new_receiver_address">新建收货地址</string>
    <string name="select_receiver_address">选择收货地址</string>
    <string name="please_input_receiver_name">请输入收货人姓名</string>
    <string name="please_input_receiver_phone">请输入收货人手机号码</string>
    <string name="please_input_receiver_region">请输入收货人所在地区</string>
    <string name="please_input_receiver_add_detail">请输入收货人的详细地址</string>
    <string name="have_already_payoff">已付金额:</string>
    <string name="see_order_list">查看订单</string>
    <string name="see_order_detail">查看订单</string>
    <string name="back_book_shelf">返回书架</string>
    <string name="pay_success">支付成功</string>
    <string name="modify_order">修改订单中，请稍等&#8230;</string>
    <string name="modify_order_pay_way">修改支付方式中，请稍等&#8230;</string>
    <string name="apply_order">提交订单中，请稍等&#8230;</string>
    <string name="apply_print_begain">申请印刷中，请稍等&#8230;</string>
    <string name="total_page">共%s页</string>
    <string name="price_per_page">(¥%.2f元/页)</string>
    <string name="total_price">¥%.2f</string>
    <string name="cart_promotion_fee">%1$s活动优惠：-¥%2$.2f</string>
    <string name="total_print_num">%s本</string>
    <string name="apply_print_note">备注：成功提交订单后，本书所做的任何修改将不会影响本次印刷！</string>
    <string name="whether_need_invoice">是否提供发票</string>
    <string name="no_orders">暂无订单</string>
    <string name="no_receive_address">暂无收货地址</string>
    <string name="image_select_ok_text">完成(%1$d/%2$d)</string>
    <string name="phone_colon">手机:</string>
    <string name="unknow">未知</string>
    <string name="no_more_info">你已看完所有的内容\n多欣赏些有趣的人和话题吧</string>
    <string name="no_more_data">没有数据\n赶快添加一个吧</string>
    <string name="get_all_message">亲爱的，你已经没有内容喽</string>
    <string name="no_message">没有消息呢</string>
    <string name="loading">正在加载…</string>
    <string name="no_connect">当前无网络连接，请重新连接</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="CODE_400">请求失败</string>
    <string name="CODE_401">未授权</string>
    <string name="CODE_402">需要付款</string>
    <string name="CODE_403">拒绝访问</string>
    <string name="CODE_404">找不到</string>
    <string name="CODE_405">不允许此方法</string>
    <string name="CODE_406">不可接收</string>
    <string name="CODE_407">需要代理身份验证</string>
    <string name="CODE_408">请求超时</string>
    <string name="CODE_409">请求冲突</string>
    <string name="CODE_410">永远不可用 </string>
    <string name="CODE_411">失败</string>
    <string name="CODE_412">先决条件失败</string>
    <string name="CODE_413">请求实体太大</string>
    <string name="CODE_414">Request-URI 太长</string>
    <string name="CODE_415">不支持的媒体类型</string>
    <string name="CODE_416">所请求的范围无法满足</string>
    <string name="CODE_417">执行失败</string>
    <string name="CODE_500">服务器的内部错误</string>
    <string name="CODE_501">方法未实现</string>
    <string name="CODE_502">网关出错</string>
    <string name="CODE_503">服务器连接失败</string>
    <string name="CODE_504">被墙了</string>
    <string name="CODE_505">http版本不支持</string>
    <string name="UNKNOWN_ERROR">未知错误</string>
    <string name="SERVICE_ERROR">服务器连接失败</string>
    <string name="cart_print_property_num">×%s</string>
    <string name="cart_print_property_size">尺寸: %s</string>
    <string name="cart_print_property_color">印刷颜色: %s</string>
    <string name="cart_print_property_paper">纸张: %s</string>
    <string name="cart_print_property_color_text">印刷颜色</string>
    <string name="circle_info">圈资料</string>
    <string name="share_circle_to_friends">分享圈给好友</string>
    <string name="circle_production">圈作品</string>
    <string name="circle_photos">圈照片库</string>
    <string name="circle_member_manager">圈成员管理</string>
    <string name="publish_homework">发布作业</string>
    <string name="milestone_create">新建里程碑</string>
    <string name="milestone_share">分享里程碑</string>
    <string name="milestone_book">里程碑成书</string>
    <string name="bind_phone_hint">手机号</string>
    <string name="bind_phone_hint_code">验证码</string>
    <string name="bind_phone_hint_get_code">获取验证码</string>
    <string name="bind_phone_tip_note">成长印记需要您【验证手机号】才能进行下一步哦~</string>
    <string name="bind_phone_tip_rule">手机号验证后，可获得100个积分奖励哦~</string>
    <string name="submit">确定</string>
    <string name="notify_pwd_new_again">请再次输入新密码</string>
    <string name="notify_pwd_new">请输入您的新密码</string>
    <string name="notify_pwd_old">请输入原密码</string>
    <string name="pwd_input_tip">• 6~16位数的数字和字母组合</string>
    <string name="input_password">1234567890QWERTYUIOPASDFGHJKLZXCVBNM_</string>
    <string name="activity_teacher_author_title">教师认证</string>
</resources>