<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_publish_homework"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/publish_homework"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_photos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/circle_photos"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_production"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/circle_production"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/share_circle_to_friends"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_circle_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/circle_info"
        android:textColor="@color/text"
        android:textSize="16sp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_member_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/circle_member_manager"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_teacher_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/activity_teacher_author_title"
        android:textColor="@color/text"
        android:textSize="16sp"/>
</LinearLayout>