<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color8"
    android:orientation="vertical">

    <include layout="@layout/head" />

    <cn.timeface.circle.baby.views.ClearableEditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:background="@color/text_color1"
        android:hint="@string/notify_pwd_old"
        android:digits="@string/input_password"
        android:inputType="textPassword"
        android:padding="@dimen/size_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color6" />

    <cn.timeface.circle.baby.views.ClearableEditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:background="@color/text_color1"
        android:hint="@string/notify_pwd_new"
        android:digits="@string/input_password"
        android:inputType="textPassword"
        android:padding="@dimen/size_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color6" />

    <TextView
        android:id="@+id/pwd_tip_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/size_18"
        android:paddingRight="@dimen/size_18"
        android:text="@string/pwd_input_tip"
        android:textColor="@color/aluminum"
        android:textSize="@dimen/text_small_12"
        android:visibility="gone" />


    <cn.timeface.circle.baby.views.ClearableEditText
        android:id="@+id/et_new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:background="@color/text_color1"
        android:hint="@string/notify_pwd_new_again"
        android:digits="@string/input_password"
        android:inputType="textPassword"
        android:padding="@dimen/size_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_color6" />

    <TextView
        android:id="@+id/pwd_tip_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_6"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/size_18"
        android:paddingRight="@dimen/size_18"
        android:text="@string/pwd_input_tip"
        android:textColor="@color/aluminum"
        android:textSize="@dimen/text_small_12"
        android:visibility="gone" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_12"
        android:layout_marginRight="@dimen/size_12"
        android:layout_marginTop="@dimen/size_36"
        android:background="@drawable/selector_btn_login"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_medium" />

</LinearLayout>