<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_milestone_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/milestone_create"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_milestone_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/milestone_share"
        android:textColor="@color/text"
        android:textSize="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_color"/>

    <TextView
        android:id="@+id/tv_milestone_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_click_able"
        android:clickable="true"
        android:gravity="center"
        android:padding="@dimen/view_space_medium"
        android:text="@string/milestone_book"
        android:textColor="@color/text"
        android:textSize="16sp"/>

</LinearLayout>